--- a/src/shortcodes/support/style.scss
+++ b/src/shortcodes/support/style.scss
@@ -27,3 +27,10 @@
   margin: 5rem 0;
   font-weight: bold;
 }
+
+.dark {
+  .support-container {
+    background-color: #1a1a1a;
+    border-color: #323232;
+  }
+}
